# dcabot-dist

./: .gitignore  BUILD.md  README.md  requirements.txt  setup.cfg  setup.py
dcabot/: main.py
dcabot/dca_config/: SecretsManager.py  __init__.py  config.py  config_utils.py
dcabot/notifications/: send_email.py
etc/: dcabot.conf
src/dcabot/: constants.py  main.py  send_email.py
src/dcabot/dca_config/: config.py
