[metadata]
name = dcabot-zeebrow
version = 0.0.1
author = Zeebrow
author_email = zeebrow@dcabot-project.com
description = A small crypto-buying program for dollar-cost-averaging
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zeebrow/dcabot
project_urls = 
	Bug Tracker = https://github.com/zeebrow/dcabot
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: CentOS 7

[options]
package_dir = 
	= dcabot
packages = find:
python_requires = >=3.6

[options.packages.find]
where = dcabot
